# Hoot-scrapper

./: .coverage  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  scrape.yml
notebooks/: analyze.py
src/hootscrapper/: cli.py  config.py  storage.py  utils.py
src/hootscrapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hootscrapper/scrapers/: sec_edgar.py
tests/: test_cli.py  test_parser.py  test_storage.py
